--- a/convite.html
+++ b/convite.html
@@ -6,7 +6,7 @@
     <title>Convite</title>
     <style>
         body {
-            background-color: #800000; /* Cor de fundo vinho */
+            background-color: #800000; 
             font-family: Arial, sans-serif;
             text-align: center;
             color: white;
@@ -25,7 +25,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            padding: 20px; /* Adiciona espaço nas bordas */
+            padding: 20px; /* Espaço nas bordas */
             box-sizing: border-box;
         }
         .convite-img {
@@ -33,12 +33,12 @@
             max-height: 70%;
             opacity: 0;
             animation: fadeIn 1.5s forwards; /* Animação de fade-in */
-            margin-bottom: 20px; /* Espaço entre a imagem e o botão */
+            margin-bottom: 20px; 
         }
         .download-btn {
             padding: 10px 20px;
             font-size: 1.2em;
-            background-color: #3a0000; /* Cor do botão */
+            background-color: #3a0000; 
             color: white;
             border: none;
             cursor: pointer;
@@ -64,8 +64,8 @@
 </head>
 <body>
     <div class="container">
-        <img src="./Gold and Black Elegant Birthday Party Invitation.png" alt="Convite" class="convite-img" id="conviteImg"> <!-- Substitua "convite-imagem.jpg" pela sua imagem do convite -->
-        <a href="./Gold and Black Elegant Birthday Party Invitation.png" download="Convite_Jogo_Labirinto.jpg" class="download-btn">Baixar Convite</a>
+        <img src="./download.jpg" alt="Convite" class="convite-img" id="conviteImg"> <!-- Substitua "convite-imagem.jpg" pela sua imagem do convite -->
+        <a href="./download.jpg" download="Convite_Jogo_Labirinto.jpg" class="download-btn">Baixar Convite</a>
     </div>
 
     <script>
