--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             justify-content: center; /* Centraliza verticalmente */
             align-items: center; /* Centraliza horizontalmente */
             position: relative;
-            background: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.2)), url(./imagem_2025-03-23_211806726.jpg);
+            background: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.2)), url(./imagem_2025-06-03_151028041.png);
             background-size: cover;
             background-position: center;
             height: 100vh;
